[[release-notes-5.8.0]]
== 5.8.0

*Date of Release:* September ❓, 2021

*Scope:* ❓

* Declarative test suites via `@Suite` classes
* `LauncherSession` and accompanying listener
* New `UniqueIdTrackingListener`
* More fine-grained Java Flight Recorder events
* Java Flight Recorder support on Java 8 Update 262 or higher
* Test class ordering
* `@TempDir` can be used to create multiple temporary directories
* Extension registration via `@ExtendWith` on fields and parameters
* Auto-close support for arguments in `@ParameterizedTest` methods
* Memory and performance optimizations
* Numerous bug fixes and minor improvements

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit5-repo}+/milestone/51?closed=1+[5.8 M1],
link:{junit5-repo}+/milestone/55?closed=1+[5.8 RC1], and
link:{junit5-repo}+/milestone/57?closed=1+[5.8 GA] milestone pages in the JUnit repository
on GitHub.


[[release-notes-5.8.0-overall-improvements]]
=== Overall Improvements

* The API Guardian dependency is now exported as a compile-only dependency for consuming
  Gradle projects.
* Logging messages are no longer issued at `INFO` level in order to lower the "textual
  noise" on the console when Java's Util Logging is used in its default configuration.


[[release-notes-5.8.0-junit-platform]]
=== JUnit Platform

==== Bug Fixes

* Classes explicitly selected via `@SelectClasses` are now always included in the test
  suite. This applies to `@Suite` classes running via the `SuiteTestEngine` and suite
  classes running via the `JUnitPlatform` `Runner`.
* `SummaryGeneratingListener` is now thread-safe and can handle concurrently failing tests.

==== Deprecations and Breaking Changes

* For consistency with the rest of the JUnit Platform, the experimental
  `LauncherDiscoveryListener` is now an interface instead of an abstract class.

==== New Features and Improvements

* New `junit-platform-suite-engine` module to execute declarative test suites on the JUnit