@@ -604,6 +604,25 @@ subject to expansion.
 [[running-tests-junit-platform-runner]]
 === Using JUnit 4 to run the JUnit Platform
 
+[WARNING]
+.The `JUnitPlatform` runner has been deprecated
+====
+The `JUnitPlatform` runner was developed by the JUnit team as an interim solution for
+running test suites and tests on the JUnit Platform in a JUnit 4 environment.
+
+In recent years, all mainstream build tools and IDEs provide built-in support for running
+tests directly on the JUnit Platform.
+
+In addition, the introduction of `@Suite` support provided by the
+`junit-platform-suite-engine` module makes the `JUnitPlatform` runner obsolete. See
+<<junit-platform-suite-engine>> for details.
+
+The `JUnitPlatform` runner has therefore been deprecated in JUnit Platform 1.8 and will be
+removed in JUnit Platform 2.0.
+
+If you are using the `JUnitPlatform` runner, please migrate to the `@Suite` support.
+====
+
 The `JUnitPlatform` runner is a JUnit 4 based `Runner` which enables you to run any test
 whose programming model is supported on the JUnit Platform in a JUnit 4 environment --
 for example, a JUnit Jupiter test class.
@@ -613,8 +632,7 @@ build systems that support JUnit 4 but do not yet support the JUnit Platform dir
 
 NOTE: Since the JUnit Platform has features that JUnit 4 does not have, the runner is
 only able to support a subset of the JUnit Platform functionality, especially with regard
-to reporting (see <<running-tests-junit-platform-runner-technical-names>>). But for the
-time being the `JUnitPlatform` runner is an easy way to get started.
+to reporting (see <<running-tests-junit-platform-runner-technical-names>>).
 
 [[running-tests-junit-platform-runner-setup]]
 ==== Setup
