@@ -10,11 +10,10 @@
 
 package example;
 
-import org.junit.platform.runner.JUnitPlatform;
 import org.junit.platform.suite.api.ExcludeTags;
 import org.junit.platform.suite.api.IncludeClassNamePatterns;
 import org.junit.platform.suite.api.SelectPackages;
-import org.junit.runner.RunWith;
+import org.junit.platform.suite.api.Suite;
 
 /**
  * <h3>Logging Configuration</h3>
@@ -29,9 +28,9 @@ import org.junit.runner.RunWith;
  *
  * @since 5.0
  */
-@RunWith(JUnitPlatform.class)
+@Suite
 @SelectPackages("example")
 @IncludeClassNamePatterns(".+(Tests|Demo)$")
 @ExcludeTags("exclude")
-public class DocumentationTestSuite {
+class DocumentationTestSuite {
 }
