@@ -14,10 +14,12 @@ package example;
 import static org.junit.jupiter.api.Assertions.fail;
 
 import org.junit.jupiter.api.Test;
-import org.junit.platform.runner.JUnitPlatform;
 import org.junit.runner.RunWith;
 
-@RunWith(JUnitPlatform.class)
+//end::user_guide[]
+@SuppressWarnings("deprecation")
+//tag::user_guide[]
+@RunWith(org.junit.platform.runner.JUnitPlatform.class)
 public class JUnitPlatformClassDemo {
 
 	@Test
