@@ -11,15 +11,15 @@
 package example;
 
 //tag::user_guide[]
-import org.junit.platform.runner.JUnitPlatform;
 import org.junit.platform.suite.api.SelectPackages;
 import org.junit.platform.suite.api.SuiteDisplayName;
 import org.junit.runner.RunWith;
 
-@RunWith(JUnitPlatform.class)
+@RunWith(org.junit.platform.runner.JUnitPlatform.class)
 @SuiteDisplayName("JUnit Platform Suite Demo")
 @SelectPackages("example")
 //end::user_guide[]
+@SuppressWarnings("deprecation")
 @org.junit.platform.suite.api.ExcludeTags("exclude")
 //tag::user_guide[]
 public class JUnitPlatformSuiteDemo {
