@@ -22,7 +22,7 @@ dependencies {
 	testFixturesImplementation(projects.junitPlatformRunner)
 
 	testImplementation(projects.junitPlatformLauncher)
-	testImplementation(projects.junitPlatformRunner)
+	testImplementation(projects.junitPlatformSuiteEngine)
 	testImplementation(projects.junitPlatformTestkit)
 }
 
