@@ -3,7 +3,7 @@
 
 *Date of Release:* September ❓, 2021
 
-*Scope:* ❓
+*Scope:*
 
 * Declarative test suites via `@Suite` classes
 * `LauncherSession` and accompanying listener
@@ -45,6 +45,9 @@ on GitHub.
 
 ==== Deprecations and Breaking Changes
 
+* The `JUnitPlatform` runner has been deprecated in favor of the new `@Suite` support. See
+  the warning in <<../user-guide/index.adoc#running-tests-junit-platform-runner, Using
+  JUnit 4 to run the JUnit Platform>> for details.
 * For consistency with the rest of the JUnit Platform, the experimental
   `LauncherDiscoveryListener` is now an interface instead of an abstract class.
 
